Reset sources for azure-communication-rooms to the release version 1.0.7.